--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "bootstrap": "^5.2.0",
     "connect-session-sequelize": "^7.1.7",
     "cookie-parser": "^1.4.6",
+    "csrf": "^3.1.0",
+    "csurf": "^1.11.0",
     "ejs": "^3.1.10",
     "express": "^4.18.1",
     "express-session": "^1.18.0",
